# swagger.yaml
@@ -14,6 +14,8 @@ paths:
     $ref: ./especificacao/paths/empresas-id.yaml
   /empresas/{sessao}/admin:
     $ref: ./especificacao/paths/empresas-admin.yaml
+  /empresas/{sessao}/reset-senha:
+    $ref: ./especificacao/paths/empresas-reset-senha.yaml
   /empresas/{sessao}/cliente:
     $ref: ./especificacao/paths/empresas-cliente.yaml
   /empresas/search/findBySessaoWhatsapp:
@@ -55,6 +57,8 @@ components:
       $ref: ./especificacao/schemas/empresa/EmpresaUpdateDTO.yaml
     EmpresaUpdateAdminDTO:
       $ref: ./especificacao/schemas/empresa/EmpresaUpdateAdminDTO.yaml
+    ResetSenhaAdminDTO:
+      $ref: ./especificacao/schemas/empresa/ResetSenhaAdminDTO.yaml
     EmpresaResponseDTO:
       $ref: ./especificacao/schemas/empresa/EmpresaResponseDTO.yaml
     ModuloMenuDTO:
